--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
             "no-use-before-define": 0,
             "no-plusplus": 0,
             "max-len": [
-                "error",
-                260
+                "warning",
+                400
             ],
             "indent": [
                 "error",
