--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,12 @@ deploy:
   verbose: true
   on:
     branch: master
+env:
+  - VUE_APP_API_KEY=$VUE_APP_API_KEY
+  - VUE_APP_APP_ID=$VUE_APP_APP_ID
+  - VUE_APP_AUTH_DOMAIN=$VUE_APP_AUTH_DOMAIN
+  - VUE_APP_DATABASE_URL=$VUE_APP_DATABASE_URL
+  - VUE_APP_MEASUREMENT_ID=$VUE_APP_MEASUREMENT_ID
+  - VUE_APP_MESSAGING_SENDER_ID=$VUE_APP_MESSAGING_SENDER_ID
+  - VUE_APP_PROJECT_ID=$VUE_APP_PROJECT_ID
+  - VUE_APP_STORAGE_BUCKET=$VUE_APP_STORAGE_BUCKET
