--- a/package.json
+++ b/package.json
@@ -1,78 +1,81 @@
 {
-    "name": "article-tracker",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
+  "name": "article-tracker",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
+    "core-js": "^3.6.4",
+    "firebase": "^7.9.3",
+    "vue": "^2.6.11"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.2.0",
+    "@vue/cli-plugin-eslint": "~4.2.0",
+    "@vue/cli-service": "~4.2.0",
+    "@vue/eslint-config-airbnb": "^5.0.2",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-vue": "^6.1.2",
+    "sass": "^1.26.2",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
     },
-    "dependencies": {
-        "axios": "^0.19.2",
-        "cheerio": "^1.0.0-rc.3",
-        "core-js": "^3.6.4",
-        "firebase": "^7.9.3",
-        "vue": "^2.6.11"
+    "extends": [
+      "plugin:vue/essential",
+      "@vue/airbnb"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
     },
-    "devDependencies": {
-        "@vue/cli-plugin-babel": "~4.2.0",
-        "@vue/cli-plugin-eslint": "~4.2.0",
-        "@vue/cli-service": "~4.2.0",
-        "@vue/eslint-config-airbnb": "^5.0.2",
-        "babel-eslint": "^10.0.3",
-        "eslint": "^6.7.2",
-        "eslint-plugin-import": "^2.20.1",
-        "eslint-plugin-vue": "^6.1.2",
-        "sass": "^1.26.2",
-        "sass-loader": "^8.0.2",
-        "vue-template-compiler": "^2.6.11"
-    },
-    "eslintConfig": {
-        "root": true,
-        "env": {
-            "node": true
-        },
-        "extends": [
-            "plugin:vue/essential",
-            "@vue/airbnb"
-        ],
-        "parserOptions": {
-            "parser": "babel-eslint"
-        },
-        "rules": {
-            "import/no-unresolved": 0,
-            "import/extensions": 0,
-            "no-shadow": 0,
-            "no-param-reassign": 0,
-            "arrow-parens": 0,
-            "arrow-body-style": 0,
-            "no-console": 0,
-            "no-unused-vars": 0,
-            "func-names": 0,
-            "prefer-arrow-callback": 0,
-            "space-before-function-paren": 0,
-            "no-use-before-define": 0,
-            "no-plusplus": 0,
-            "no-useless-return": 0,
-            "no-unreachable": 0,
-            "no-return-assign": 0,
-            "max-len": [
-                "warn",
-                400
-            ],
-            "indent": [
-                "error",
-                2
-            ]
+    "rules": {
+      "import/no-unresolved": 0,
+      "import/extensions": 0,
+      "no-shadow": 0,
+      "no-param-reassign": 0,
+      "arrow-parens": 0,
+      "arrow-body-style": 0,
+      "no-console": 0,
+      "no-unused-vars": 0,
+      "func-names": 0,
+      "prefer-arrow-callback": 0,
+      "space-before-function-paren": 0,
+      "no-use-before-define": 0,
+      "no-plusplus": 0,
+      "no-useless-return": 0,
+      "no-unreachable": 0,
+      "no-return-assign": 0,
+      "max-len": [
+        "warn",
+        400
+      ],
+      "indent": [
+        "error",
+        2,
+        {
+          "SwitchCase": 1
         }
-    },
-    "postcss": {
-        "plugins": {
-            "autoprefixer": {}
-        }
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions"
-    ]
+      ]
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
