--- a/package.json
+++ b/package.json
@@ -56,6 +56,10 @@
       "no-useless-return": 0,
       "no-unreachable": 0,
       "no-return-assign": 0,
+      "quotes": [
+        "error",
+        "double"
+      ],
       "max-len": [
         "warn",
         400
