--- a/package.json
+++ b/package.json
@@ -8,23 +8,31 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/cheerio": "^0.22.21",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "core-js": "^3.6.4",
-    "firebase": "^7.9.3",
-    "vue": "^2.6.11"
+    "firebase": "^7.16.0",
+    "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^8.4.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
+    "@vue/cli-plugin-typescript": "^4.4.6",
     "@vue/cli-service": "~4.2.0",
     "@vue/eslint-config-airbnb": "^5.0.2",
+    "@vue/eslint-config-typescript": "^5.0.1",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-vue": "^6.1.2",
     "sass": "^1.26.2",
     "sass-loader": "^8.0.2",
+    "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -32,12 +40,20 @@
     "env": {
       "node": true
     },
+    "parser": "vue-eslint-parser",
     "extends": [
       "plugin:vue/essential",
-      "@vue/airbnb"
+      "@vue/airbnb",
+      "@vue/typescript",
+      "eslint:recommended",
+      "plugin:@typescript-eslint/eslint-recommended",
+      "plugin:@typescript-eslint/recommended"
+    ],
+    "plugins": [
+      "@typescript-eslint"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@typescript-eslint/parser"
     },
     "rules": {
       "import/no-unresolved": 0,
@@ -51,11 +67,19 @@
       "func-names": 0,
       "prefer-arrow-callback": 0,
       "space-before-function-paren": 0,
-      "no-use-before-define": 0,
       "no-plusplus": 0,
       "no-useless-return": 0,
       "no-unreachable": 0,
       "no-return-assign": 0,
+      "no-empty-function": 0,
+      "@typescript-eslint/no-empty-function": 0,
+      "no-use-before-define": 0,
+      "@typescript-eslint/no-use-before-define": 0,
+      "@typescript-eslint/no-empty-interface": 0,
+      "no-case-declarations": 0,
+      "@typescript-eslint/no-unused-vars": 0,
+      "@typescript-eslint/no-explicit-any": 0,
+      "@typescript-eslint/explicit-module-boundary-types": 0,
       "quotes": [
         "error",
         "double"
