Table section lint warnings and errors are fixed

--- a/package.json
+++ b/package.json
@@ -80,6 +80,9 @@
       "@typescript-eslint/no-unused-vars": 0,
       "@typescript-eslint/no-explicit-any": 0,
       "@typescript-eslint/explicit-module-boundary-types": 0,
+      "no-underscore-dangle": 0,
+      "class-methods-use-this": 0,
+      "semi": 0,
       "quotes": [
         "error",
         "double"
