--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "test": "jest",
-    "test-watch": "jest --watch",
-    "test-coverage": "jest --coverage"
+    "test-coverage": "jest --coverage",
+    "test-watch": "jest --watch"
   },
   "dependencies": {
     "@types/cheerio": "^0.22.21",
@@ -21,20 +22,24 @@
     "vue-property-decorator": "^8.4.2"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-plugin-typescript": "^4.4.6",
+    "@vue/cli-plugin-unit-jest": "^4.4.6",
     "@vue/cli-service": "~4.2.0",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/eslint-config-typescript": "^5.0.1",
+    "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-vue": "^6.1.2",
     "sass": "^1.26.2",
     "sass-loader": "^8.0.2",
+    "ts-jest": "^26.1.3",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   },
@@ -86,6 +91,7 @@
       "no-underscore-dangle": 0,
       "class-methods-use-this": 0,
       "semi": 0,
+      "import/no-cycle": 0,
       "quotes": [
         "error",
         "double"
@@ -101,7 +107,18 @@
           "SwitchCase": 1
         }
       ]
-    }
+    },
+    "overrides": [
+      {
+        "files": [
+          "**/__tests__/*.{j,t}s?(x)",
+          "**/tests/unit/**/*.spec.{j,t}s?(x)"
+        ],
+        "env": {
+          "jest": true
+        }
+      }
+    ]
   },
   "postcss": {
     "plugins": {
